--- a/recipe-page/static/css/styles.css
+++ b/recipe-page/static/css/styles.css
@@ -23,5 +23,13 @@ body {
 .left {
   display: inline-block;
   width: 600px;
-  float: left; 
+  float: left;
+  margin-top: 25px;
+}
+
+.right {
+  display: inline-block;
+  width: 600px;
+  float: left;
+  margin-left: 30px;
 }
