Complete styling and layout

--- a/recipe-page/static/css/styles.css
+++ b/recipe-page/static/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #cff9f9;
+  background: linear-gradient(to top left, #33cccc -70%, #ffffff 100%);
 }
 
 .head {
@@ -7,17 +7,19 @@ body {
   font-family: 'Indie Flower', cursive;
   font-family: 'Poiret One', cursive;
   font-size: 55px;
+  text-align: center;
 }
 
 .subhead {
   font-family: 'Open Sans Condensed', sans-serif;
   font-family: 'Indie Flower', cursive;
   font-family: 'Poiret One', cursive;
-  font-size: 25px;
+  font-size: 28px;
 }
 
 .description {
-  width: 600px;
+  text-align: center;
+  font-style: italic;
 }
 
 .left {
@@ -25,11 +27,24 @@ body {
   width: 600px;
   float: left;
   margin-top: 25px;
+  margin-left: 50px;
 }
 
 .right {
   display: inline-block;
   width: 600px;
   float: left;
-  margin-left: 30px;
+  margin-left: 50px;
+}
+
+a:link {
+  color: blue;
+}
+
+a:visited {
+  color: blue;
+}
+
+a:hover {
+  color: purple;
 }
