--- a/recipe-page/static/css/styles.css
+++ b/recipe-page/static/css/styles.css
@@ -22,7 +22,7 @@ body {
   font-style: italic;
 }
 
-.left {
+/* .left {
   display: inline-block;
   width: 600px;
   float: left;
@@ -35,7 +35,28 @@ body {
   width: 600px;
   float: left;
   margin-left: 50px;
+} */
+
+.left {
+  width: 50%;
+  float: left;
+  position: relative;
+  left: 5%;
+  overflow: auto;
+  /* border: solid; */
+  height: 600px;
 }
+
+.right {
+  width: 40%;
+  float: right;
+  position: relative;
+  right: 15%
+  overflow: auto;
+  /* border: solid; */
+  height: 600px;
+}
+
 
 a:link {
   color: blue;
@@ -47,4 +68,18 @@ a:visited {
 
 a:hover {
   color: purple;
+}
+
+.bottom {
+  text-align: center;
+  font-size: small;
+}
+
+footer {
+  text-align: center;
+  margin: 50px 0;
+}
+
+.bottom {
+  margin-top: 50px;
 }
